tests/NormalTests/paczka1/small_fuzzy/98409263.err
Error in line 3: z1hro A366 52,3
Error in line 4: z1hro A340 63,6
